<resources>
    <string name="app_name">eApp</string>
    <string name="google_maps_key">AIzaSyAEfBNgpV7AVbjjcXxH16Fp-hs8Em4vZvU</string>
    <string name="tabs">Tabs</string>
    <string name="storage">Storage</string>
    <string name="start_button_label">ΘΕΣΗ ΣΥΣΚΕΥΗΣ</string>
    <string name="internet_button_label">Internet</string>
    <string name="open_button_label">Storage (open)</string>
    <string name="save_button_label">Storage (save)</string>
    <string name="area_placeholder">Γράψτε το κείμενό σας...</string>
    <string name="autofill_placeholder">Δεν μπορείτε να αποθηκεύσετε κενό κείμενο</string>
    <string name="select_folder">Επίλέξτε φάκελο</string>
    <string name="select_file">Επιλέξτε αρχείο</string>
    <string name="content_loaded">Το αρχείο φορτώθηκε επιτυχώς!</string>
    <string name="read_failed">Προέκυψε πρόβλημα κατά την ανάγνωση του αρχείου, προσπαθήστε ξανά.</string>
    <string name="file_created">Το αρχείο δημιουργήθηκε επιτυχώς!</string>
    <string name="file_create_error">Προέκυψε πρόβλημα κατά τη δημιουργία του αρχείου, προσπαθήστε ξανά.</string>
    <string name="file_updated">Το αρχείο τροποποιήθηκε επιτυχώς!</string>
    <string name="file_update_failed">Προέκυψε πρόβλημα κατά την τροποποίηση του αρχείου, προσπαθήστε ξανά.</string>
    <string name="file_not_selected">Δεν έχει επιλεχθεί αρχείο</string>
    <string name="user_registration">Εγγραφή χρήστη</string>
    <string name="user_name">Όνομα χρήστη</string>
    <string name="user_email">E-Mail</string>
    <string name="user_password">Κωδικός</string>
    <string name="register_button_label">ΕΓΓΡΑΦΗ</string>

    <string name="INIT_ERROR">Error</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia Engine. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia Engine. Camera not accessible</string>
    <string name="INIT_ERROR_TRACKERS_NOT_INITIALIZED">This device may not be supported. For a list of supported devices please see https://library.vuforia.com/articles/Solution/ground-plane-supported-devices.html</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia Engine App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia Engine App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia Engine App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia Engine.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>


    <string name="menu_back">Vuforia Engine Samples</string>
    <string name="menu_device_tracker">Device Tracker</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_versions">VERSIONS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_virtual_buttons">VIRTUAL BUTTONS</string>
    <string name="button_OK">OK</string>
    <string name="instruct_relocalize">Point camera to previous position to restore tracking</string>
    <string name="feature_image_targets">Image Targets</string>



</resources>
