<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eap.sdy61.ge4.eva_b.eapp.MainActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"
        ></include>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:background="@color/wafer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnInternet"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_marginTop="78dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/internet_btn"
            android:text="@string/internet_button_label"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnOpenStorage"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/open_storage_btn"
            android:text="@string/open_button_label"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSaveStorage"
            android:layout_width="160dp"
            android:layout_height="42dp"
            android:layout_marginBottom="22dp"
            android:background="@drawable/save_storage_btn"
            android:text="@string/save_button_label"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
