<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/posInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gallery"
        android:layout_alignParentTop="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/dustyGray"
                android:text="@string/user_registration"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/userImg"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_img"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/dustyGray"
                android:text="@string/user_name"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:id="@+id/userName"
                android:layout_gravity="center_horizontal"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="top"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/dustyGray"
                android:text="@string/user_email"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:id="@+id/userEmail"
                android:layout_gravity="center_horizontal"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="top"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/dustyGray"
                android:text="@string/user_password"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:id="@+id/userPassword"
                android:layout_gravity="center_horizontal"
                android:layout_width="240dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textPassword"/>

     </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="18dp"
            android:background="@color/sunGlow"
            android:paddingBottom="10dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:text="@string/register_button_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>